// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Terms > Should create term in code with definition template 1`] = `
<h1>
  Web
</h1>
<div class="yfm-code-floating-container">
  <pre>
    <code class="hljs">
      <i class="yfm yfm-term_title"
         term-key=":html"
         id="html"
      >
        HTML
      </i>
      : Lorem
    </code>
  </pre>
  <div class="yfm-code-floating">
    <button role="button"
            class="yfm-code-button yfm-clipboard-button"
    >
      <svg width="16"
           height="16"
           viewbox="0 0 24 24"
           class="yfm-code-icon yfm-clipboard-icon"
           data-animation="3"
      >
        <path fill="currentColor"
              d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        >
        </path>
        <path stroke="currentColor"
              fill="transparent"
              stroke-width="1.5"
              d="M9.5 13l3 3l5 -5"
              visibility="hidden"
        >
          <animate id="visibileAnimation-3"
                   attributename="visibility"
                   from="hidden"
                   to="visible"
                   dur="0.2s"
                   fill="freeze"
                   begin
          >
          </animate>
          <animate id="hideAnimation-3"
                   attributename="visibility"
                   from="visible"
                   to="hidden"
                   dur="1s"
                   begin="visibileAnimation-3.end+1"
                   fill="freeze"
          >
          </animate>
        </path>
      </svg>
    </button>
  </div>
</div>
<p>
  Use the
  <code>
    [HTML](*html)
  </code>
  syntax.
</p>
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
`;

exports[`Terms > Should create term in table with definition template 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
<h1>
  Web
</h1>
<table>
  <thead>
    <tr>
      <th>
        Language
      </th>
      <th style="text-align:center">
        Initial release
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <i class="yfm yfm-term_title"
           term-key=":html"
           role="button"
           aria-controls=":html_element"
           tabindex="0"
           id="html"
        >
          HTML
        </i>
      </td>
      <td style="text-align:center">
        1993
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Terms > Should create term in text with definition template 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
<h1>
  Web
</h1>
<p>
  The
  <i class="yfm yfm-term_title"
     term-key=":html"
     role="button"
     aria-controls=":html_element"
     tabindex="0"
     id="html"
  >
    HTML
  </i>
  specification
</p>
`;

exports[`Terms > Should emit lint token for undefined term in lint mode 1`] = `
<p>
  A
  <i class="yfm yfm-term_title"
     term-key=":myterm"
     role="button"
     aria-controls=":myterm_element"
     tabindex="0"
     id="myterm"
  >
    defined
  </i>
  and an [undefined](*notexist).
</p>
<dfn class="yfm yfm-term_dfn"
     id=":myterm_element"
     role="dialog"
>
  <p>
    my definition
  </p>
</dfn>
`;

exports[`Terms > Should handle asterisk inside term text 1`] = `
<p>
  <i class="yfm yfm-term_title"
     term-key=":popup1"
     role="button"
     aria-controls=":popup1_element"
     tabindex="0"
     id="popup1"
  >
    &lt;=
  </i>
  ,
  <i class="yfm yfm-term_title"
     term-key=":popup2"
     role="button"
     aria-controls=":popup2_element"
     tabindex="0"
     id="popup2"
  >
    =*
  </i>
  ,
</p>
<dfn class="yfm yfm-term_dfn"
     id=":popup1_element"
     role="dialog"
>
  <p>
    Popup 1
  </p>
</dfn>
<dfn class="yfm yfm-term_dfn"
     id=":popup2_element"
     role="dialog"
>
  <p>
    Popup 1
  </p>
</dfn>
`;

exports[`Terms > Should handle term inside superscript 1`] = `
<p>
  Some text
  <sup>
    <i class="yfm yfm-term_title"
       term-key=":popup1"
       role="button"
       aria-controls=":popup1_element"
       tabindex="0"
       id="popup1"
    >
      ?
    </i>
  </sup>
  and more text.
</p>
<dfn class="yfm yfm-term_dfn"
     id=":popup1_element"
     role="dialog"
>
  <p>
    Popup definition
  </p>
</dfn>
`;

exports[`Terms > Should keep term definition referenced transitively through another term definition 1`] = `
<h1>
  Web Technologies
</h1>
<p>
  The
  <i class="yfm yfm-term_title"
     term-key=":html"
     role="button"
     aria-controls=":html_element"
     tabindex="0"
     id="html"
  >
    HTML
  </i>
  standard.
</p>
<dfn class="yfm yfm-term_dfn"
     id=":css_element"
     role="dialog"
>
  <p>
    Cascading Style Sheets.
  </p>
</dfn>
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language, styled with
    <i class="yfm yfm-term_title"
       term-key=":css"
       role="button"
       aria-controls=":css_element"
       tabindex="0"
       id="css"
    >
      CSS
    </i>
    .
  </p>
</dfn>
`;

exports[`Terms > Should preserve regular links and convert term links 1`] = `
<p>
  A
  <a href="https://example.com"
     target="_blank"
     rel="noreferrer noopener"
  >
    link
  </a>
  and a
  <i class="yfm yfm-term_title"
     term-key=":myterm"
     role="button"
     aria-controls=":myterm_element"
     tabindex="0"
     id="myterm"
  >
    term
  </i>
  .
</p>
<dfn class="yfm yfm-term_dfn"
     id=":myterm_element"
     role="dialog"
>
  <p>
    my definition
  </p>
</dfn>
`;

exports[`Terms > Should remove unused term definition when reference is inside false condition 1`] = `
<h1>
  Web
</h1>
<p>
  The
  <i class="yfm yfm-term_title"
     term-key=":html"
     role="button"
     aria-controls=":html_element"
     tabindex="0"
     id="html"
  >
    HTML
  </i>
  specification
</p>
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
`;

exports[`Terms > Should strip undefined term links and keep content 1`] = `
<p>
  A
  <i class="yfm yfm-term_title"
     term-key=":myterm"
     role="button"
     aria-controls=":myterm_element"
     tabindex="0"
     id="myterm"
  >
    defined
  </i>
  and an [undefined](*notexist).
</p>
<dfn class="yfm yfm-term_dfn"
     id=":myterm_element"
     role="dialog"
>
  <p>
    my definition
  </p>
</dfn>
`;

exports[`Terms > Term should use content from include 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
<h1>
  Web
</h1>
<p>
  The
  <i class="yfm yfm-term_title"
     term-key=":html"
     role="button"
     aria-controls=":html_element"
     tabindex="0"
     id="html"
  >
    HTML
  </i>
  specification
</p>
`;

exports[`Terms > Term should use escape regexp like chars 1`] = `
<div class="yfm-code-floating-container">
  <pre>
    <code class="hljs">
      code
    </code>
  </pre>
  <div class="yfm-code-floating">
    <button role="button"
            class="yfm-code-button yfm-clipboard-button"
    >
      <svg width="16"
           height="16"
           viewbox="0 0 24 24"
           class="yfm-code-icon yfm-clipboard-icon"
           data-animation="0"
      >
        <path fill="currentColor"
              d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        >
        </path>
        <path stroke="currentColor"
              fill="transparent"
              stroke-width="1.5"
              d="M9.5 13l3 3l5 -5"
              visibility="hidden"
        >
          <animate id="visibileAnimation-0"
                   attributename="visibility"
                   from="hidden"
                   to="visible"
                   dur="0.2s"
                   fill="freeze"
                   begin
          >
          </animate>
          <animate id="hideAnimation-0"
                   attributename="visibility"
                   from="visible"
                   to="hidden"
                   dur="1s"
                   begin="visibileAnimation-0.end+1"
                   fill="freeze"
          >
          </animate>
        </path>
      </svg>
    </button>
  </div>
</div>
<p>
  <i class="yfm yfm-term_title"
     term-key=":*"
     role="button"
     aria-controls=":*_element"
     tabindex="0"
     id="*"
  >
    *
  </i>
</p>
<dfn class="yfm yfm-term_dfn"
     id=":*_element"
     role="dialog"
>
  <ul>
    <li>
    </li>
  </ul>
</dfn>
`;

exports[`Terms > multilineTermDefinitions > Should consume all content until EOF for a single term 1`] = `
<h1>
  Page
</h1>
<p>
  Check the
  <i class="yfm yfm-term_title"
     term-key=":api"
     role="button"
     aria-controls=":api_element"
     tabindex="0"
     id="api"
  >
    API
  </i>
  .
</p>
<dfn class="yfm yfm-term_dfn"
     id=":api_element"
     role="dialog"
>
  <p>
    API (Application Programming Interface) is a set of
    <br>
    definitions and protocols.
  </p>
  <p>
    Extra details about the API:
  </p>
  <ul>
    <li>
      REST
    </li>
    <li>
      GraphQL
    </li>
  </ul>
  <p>
    More information follows.
  </p>
</dfn>
`;

exports[`Terms > multilineTermDefinitions > Should consume multiline content across blank lines for multiple terms 1`] = `
<h1>
  Documentation
</h1>
<p>
  Uses
  <i class="yfm yfm-term_title"
     term-key=":api"
     role="button"
     aria-controls=":api_element"
     tabindex="0"
     id="api"
  >
    API
  </i>
  and
  <i class="yfm yfm-term_title"
     term-key=":sdk"
     role="button"
     aria-controls=":sdk_element"
     tabindex="0"
     id="sdk"
  >
    SDK
  </i>
  .
</p>
<dfn class="yfm yfm-term_dfn"
     id=":api_element"
     role="dialog"
>
  <p>
    API (Application Programming Interface) is a set of
    <br>
    definitions and protocols for building and
    <br>
    integrating software.
  </p>
  <p>
    Additional API info:
  </p>
  <ul>
    <li>
      REST API
    </li>
    <li>
      GraphQL API
    </li>
    <li>
      gRPC
    </li>
  </ul>
</dfn>
<dfn class="yfm yfm-term_dfn"
     id=":sdk_element"
     role="dialog"
>
  <p>
    SDK (Software Development Kit) is a collection of
    <br>
    development tools for building applications.
  </p>
</dfn>
`;

exports[`Terms > should create term in code with line-numbers and line-wrapping 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    HyperText Markup Language
  </p>
</dfn>
<dfn class="yfm yfm-term_dfn"
     id=":css_element"
     role="dialog"
>
  <p>
    Cascading Style Sheets
  </p>
</dfn>
<dfn class="yfm yfm-term_dfn"
     id=":js_element"
     role="dialog"
>
  <p>
    JavaScript
  </p>
</dfn>
<h1>
  Web
</h1>
<div class="yfm-code-floating-container">
  <pre>
    <code class="hljs">
      <span class="yfm-line-number">
        1
      </span>
      <span class="yfm-line">
        <i class="yfm yfm-term_title"
           term-key=":js"
           id="js"
        >
          JS
        </i>
        : Lorem js
      </span>
      <span class="yfm-line-number">
        2
      </span>
      <span class="yfm-line">
        <i class="yfm yfm-term_title"
           term-key=":css"
           id="css"
        >
          CSS
        </i>
        : Lorem css
      </span>
      <span class="yfm-line-number">
        3
      </span>
      <span class="yfm-line">
        <i class="yfm yfm-term_title"
           term-key=":html"
           id="html"
        >
          HTML
        </i>
        : Lorem html
      </span>
    </code>
  </pre>
  <div class="yfm-code-floating">
    <button role="button"
            class="yfm-code-button yfm-wrapping-button"
    >
      <svg width="16"
           height="16"
           viewbox="0 0 16 16"
           class="yfm-code-icon yfm-wrapping-icon"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="currentColor"
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M2.47 11.28a.75.75 0 0 1 0-1.06l3-3a.75.75 0 0 1 1.06 1.06L4.81 10H9a3.25 3.25 0 0 0 0-6.5H8A.75.75 0 0 1 8 2h1a4.75 4.75 0 1 1 0 9.5H4.81l1.72 1.72a.75.75 0 1 1-1.06 1.06z"
        >
        </path>
      </svg>
    </button>
    <button role="button"
            class="yfm-code-button yfm-clipboard-button"
    >
      <svg width="16"
           height="16"
           viewbox="0 0 24 24"
           class="yfm-code-icon yfm-clipboard-icon"
           data-animation="18"
      >
        <path fill="currentColor"
              d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        >
        </path>
        <path stroke="currentColor"
              fill="transparent"
              stroke-width="1.5"
              d="M9.5 13l3 3l5 -5"
              visibility="hidden"
        >
          <animate id="visibileAnimation-18"
                   attributename="visibility"
                   from="hidden"
                   to="visible"
                   dur="0.2s"
                   fill="freeze"
                   begin
          >
          </animate>
          <animate id="hideAnimation-18"
                   attributename="visibility"
                   from="visible"
                   to="hidden"
                   dur="1s"
                   begin="visibileAnimation-18.end+1"
                   fill="freeze"
          >
          </animate>
        </path>
      </svg>
    </button>
  </div>
</div>
`;
